[gd_scene load_steps=4 format=3 uid="uid://7v2ufchuss4o"]

[ext_resource type="Script" path="res://upgrades.gd" id="1_k54sl"]
[ext_resource type="Texture2D" uid="uid://egfnpfs6n88h" path="res://Assets/Up.png" id="1_wm4js"]
[ext_resource type="Texture2D" uid="uid://b4m4o18yr3o70" path="res://Assets/Pointer.png" id="3_01f08"]

[node name="Upgrades" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -672.0
offset_bottom = -388.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k54sl")

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 571.0
offset_bottom = 418.0
columns = 3

[node name="HFlowContainer3" type="VFlowContainer" parent="Grid"]
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="Speed" type="Label" parent="Grid/HFlowContainer3"]
z_index = 1
layout_mode = 2
text = "Movement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Grid/HFlowContainer3"]
layout_mode = 2
icon = ExtResource("1_wm4js")
flat = true

[node name="TextureRect" type="Sprite2D" parent="Grid/HFlowContainer3/Button"]
position = Vector2(20, 3)
texture = ExtResource("3_01f08")

[node name="HFlowContainer" type="VFlowContainer" parent="Grid"]
layout_mode = 2
alignment = 1

[node name="Speed" type="Label" parent="Grid/HFlowContainer"]
z_index = 1
layout_mode = 2
text = "Fire Rate"
horizontal_alignment = 1

[node name="Firerate" type="Button" parent="Grid/HFlowContainer"]
layout_mode = 2
icon = ExtResource("1_wm4js")
flat = true

[node name="TextureRect" type="Sprite2D" parent="Grid/HFlowContainer"]
position = Vector2(110, 19)
rotation = 1.5708
texture = ExtResource("3_01f08")

[node name="HFlowContainer2" type="VFlowContainer" parent="Grid"]
layout_mode = 2
alignment = 1

[node name="Speed" type="Label" parent="Grid/HFlowContainer2"]
z_index = 1
layout_mode = 2
text = "Damage"

[node name="Damage" type="Button" parent="Grid/HFlowContainer2"]
layout_mode = 2
icon = ExtResource("1_wm4js")
flat = true

[node name="TextureRect" type="Sprite2D" parent="Grid/HFlowContainer2/Damage"]
position = Vector2(20, 36)
rotation = 3.14159
texture = ExtResource("3_01f08")

[node name="HFlowContainer4" type="VFlowContainer" parent="Grid"]
layout_mode = 2
alignment = 1

[node name="Speed" type="Label" parent="Grid/HFlowContainer4"]
z_index = 1
layout_mode = 2
text = "Bullet size "

[node name="Damage" type="Button" parent="Grid/HFlowContainer4"]
layout_mode = 2
icon = ExtResource("1_wm4js")
flat = true

[node name="TextureRect" type="Sprite2D" parent="Grid/HFlowContainer4/Damage"]
position = Vector2(3, 20)
rotation = 4.71239
texture = ExtResource("3_01f08")

[connection signal="pressed" from="Grid/HFlowContainer3/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Grid/HFlowContainer/Firerate" to="." method="_on_firerate_pressed"]
[connection signal="pressed" from="Grid/HFlowContainer2/Damage" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="Grid/HFlowContainer4/Damage" to="." method="_on_size_pressed"]
